--- a/app/css/default.styl
+++ b/app/css/default.styl
@@ -222,17 +222,13 @@ body
       color #145c32
 .btn-white
   background white
+
 #maps
-  background-image url('../img/map.jpg')
   height 350px
-  background-size cover
-  background-position center center
-  background-repeat no-repeat
-  text-align center
-  h3
-    font-size 28px
-    padding-top 100px
-    color white
+
+.angular-google-map-container
+    height 350px
+
 #contact-sec
   padding 20px 0
   background #292a29
