--- a/app/css/main.css
+++ b/app/css/main.css
@@ -1911,6 +1911,43 @@ color
   }
 }
 @media only screen and (max-width: 767px) {
+  #slider-area {
+    background-color: #444;
+    height: auto;
+    position: relative;
+  }
+  #slider-area .text-on-video {
+    background: rgba(156,22,29,0.45);
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    z-index: 1;
+  }
+  #slider-area .text-on-video .text {
+    margin-top: 18%;
+    text-align: center;
+  }
+  #slider-area .text-on-video .text .btn {
+    border: 3px solid #fff;
+    font-size: 18px;
+    font-weight: bold;
+  }
+  #slider-area .text-on-video .text a {
+    margin-right: 15px;
+    font-size: 20px;
+    color: #fff;
+  }
+  #slider-area .text-on-video .text h1 {
+    text-shadow: 0 0 10px rgba(0,0,0,0.5);
+    font-size: 20px;
+    color: #fff;
+  }
+  #slider-area .text-on-video .text h3 {
+    color: #fff;
+    font-weight: 300;
+    text-shadow: 0 0 10px rgba(0,0,0,0.5);
+    font-size: 18px;
+  }
   .navbar-collapse .mobile {
     display: none;
   }
@@ -2147,9 +2184,6 @@ color
   .content-blog {
     margin: 30px 0 60px !important;
   }
-  #slider-area {
-    padding-bottom: 300px;
-  }
   .carousel-caption {
     top: 20%;
     padding: 0 15px;
@@ -2218,9 +2252,6 @@ color
   }
 }
 @media only screen and (min-width: 480px) and (max-width: 767px) {
-  #slider-area {
-    height: 300px !important;
-  }
   .single_feature i {
     left: 46%;
     top: -22%;
@@ -2230,9 +2261,7 @@ color
   }
 }
 @media only screen and (min-width: 360px) and (max-width: 640px) {
-  #slider-area {
-    height: 300px !important;
-  }
+  t,
   .single_feature i {
     left: 46%;
     top: -22%;
