--- a/app/css/responsive.styl
+++ b/app/css/responsive.styl
@@ -208,6 +208,36 @@
 /* Mobile Layout: 320px. */
 
 @media only screen and (max-width: 767px)
+  #slider-area
+    background-color #444
+    height auto
+    position relative
+    .text-on-video
+      background rgba(156, 22, 29, 0.45)
+      position absolute
+      width 100%
+      height 100%
+      z-index 1
+      .text
+        margin-top 18%
+        text-align center
+        .btn
+          border 3px solid white
+          font-size 18px
+          font-weight bold
+        a
+          margin-right 15px
+          font-size 20px
+          color white
+        h1
+          text-shadow 0 0 10px rgba(0,0,0,0.5)
+          font-size 20px
+          color white
+        h3
+          color white
+          font-weight 300
+          text-shadow 0 0 10px rgba(0,0,0,0.5)
+          font-size 18px
   .navbar-collapse
     .mobile
       display none
@@ -378,8 +408,6 @@
     margin 30px 0 60px
   .content-blog
     margin 30px 0 60px !important
-  #slider-area
-    padding-bottom 300px
   .carousel-caption
     top 20%
     padding 0 15px
@@ -457,8 +485,6 @@
 /* Wide Mobile Layout: 480px. */
 
 @media only screen and (min-width: 480px) and (max-width: 767px)
-  #slider-area
-    height 300px !important
   .single_feature i
     left 46%
     top -22%
@@ -467,8 +493,7 @@
     width 100%
 
 @media only screen and (min-width: 360px) and (max-width: 640px)
-  #slider-area
-    height 300px !important
+  t
   .single_feature i
     left 46%
     top -22%
