--- a/app/templates/partials/footer.html
+++ b/app/templates/partials/footer.html
@@ -1,5 +1,25 @@
 <div class="container">
-    <div class="text-center">
-        © 2016  Servicio Sahuayo S.A de C.V. Todos los derechos reservados.
+    <div class="col-sm-4 contact-sty">
+        <h3>Contáctanos</h3>
+        <a href="tel:333333333"><i class="ion-ios-telephone"></i> 333 333 33 33</a> <br/>
+        <a href="tel:info@ihelp.com"><i class="ion-ios-telephone"></i> info@ihelp.com</a> <br/>
+        <a href="#"> <i class="fa fa-facebook"></i></a>
+        <a href="#"> <i class="fa fa-twitter"></i></a>
+        <a href="#"> <i class="fa fa-youtube"></i></a>
+    </div>
+    <div class="col-sm-4 contact-sty">
+        <h3>
+            Acerca de iHelp
+        </h3>
+        <a href="#">Políticas de privacidad</a> <br/>
+        <a href="#">Blog</a> <br/>
+        <a href="#">Contacto</a>
+    </div>
+    <div class="col-sm-4 contact-sty">
+        <h3>
+            Descargar app
+        </h3>
+        <a href="#" class="download-app"><i class="fa fa-apple"></i></a>
+        <a href="#" class="download-app"><i class="fa fa-android"></i></a>
     </div>
 </div>
