--- a/app/css/main.css
+++ b/app/css/main.css
@@ -86,7 +86,7 @@ body {
   visibility: hidden;
 }
 .container-pages {
-  margin-top: 100px;
+  margin-top: 0;
 }
 .deckgrid {
   margin: 0 auto;
@@ -131,7 +131,6 @@ body {
   text-align: center;
 }
 .header .navbar-default {
-  position: fixed;
   left: 0;
   right: 0;
   background: #fff;
@@ -141,7 +140,6 @@ body {
   border-radius: 0;
   margin-bottom: 0;
   z-index: 9999;
-  box-shadow: 0 0 10px rgba(0,0,0,0.4);
 }
 .header .navbar-default .navbar-brand {
   padding: 5px 15px;
@@ -159,7 +157,7 @@ body {
 .header .navbar-default .navbar-nav > li > a:hover,
 .header .navbar-default .navbar-nav > li > a:focus {
   background-color: transparent;
-  color: #e11518;
+  color: #d96263;
 }
 .header .navbar-default .container-fluid {
   display: table;
@@ -201,8 +199,8 @@ body {
   color: #fff;
 }
 .header .logo {
-  height: 95px;
-  margin-top: -3px;
+  width: 180px;
+  margin-top: 5px;
 }
 .navbar-header {
   color: #d2b770 !important;
@@ -222,13 +220,17 @@ body {
   padding: 60px 0;
 }
 #us .who-us h1 {
-  color: #555;
+  color: #fff;
 }
 #us .who-us p {
-  color: #5d5d5d;
+  color: #fff;
   font-size: 18px;
   text-align: justify;
   padding: 15px 0;
+  font-weight: 300;
+}
+#us .who-us .clr-link {
+  color: #fff;
 }
 .box-gas {
   padding: 0 30px 20px;
@@ -262,16 +264,32 @@ body {
 }
 #contact-sec {
   padding: 20px 0;
-  background: #292a29;
+  background: #f5f5f5;
 }
 #contact-sec .section-cont {
   text-align: center;
+  padding: 20px 30px;
 }
-#contact-sec .section-cont a {
+#contact-sec .section-cont span,
+#contact-sec .section-cont p,
+#contact-sec .section-cont i {
+  color: #746857;
+  font-size: 16px;
+}
+#contact-sec .section-cont i {
+  font-size: 60px;
+}
+#newsletter {
+  padding: 30px 0;
+  text-align: center;
+  background-color: #d96263;
   color: #fff;
 }
-#contact-sec .section-cont a > i {
-  font-size: 60px;
+#newsletter input {
+  width: 100%;
+}
+#newsletter .btn {
+  text-align: left !important;
 }
 #search_submit {
   margin-top: 20px;
@@ -284,9 +302,9 @@ body {
   height: 110px;
 }
 .slider-img {
-  background-position: center center;
+  background-position: top center;
   background-size: 100%;
-  height: 420px;
+  height: 620px;
   background-repeat: no-repeat;
 }
 .bg-inner {
@@ -309,53 +327,32 @@ body {
   display: none;
 }
 .carousel-caption {
-  top: 25%;
-  opacity: 0.9;
+  top: 20%;
+  padding: 30px 60px;
+  text-align: right;
+  float: right;
   width: 100%;
   left: 0;
-  padding: 30px;
+}
+.carousel-caption .box-slide {
+  width: 50%;
+  float: right;
   text-align: left;
+  padding: 10px;
 }
-.carousel-caption h2 {
-  border-bottom: 1px solid rgba(255,255,255,0.4);
-  padding-bottom: 20px;
-}
-.carousel-caption .download-app {
-  padding: 20px 0;
-}
-.carousel-caption .download-app a {
-  padding-right: 15px;
-}
-.carousel-caption .log-process {
-  padding: 25px 10px;
-}
-.carousel-caption .log-process h4 {
-  font-size: 24px;
-  font-weight: 100;
-}
-.carousel-caption .btn {
-  margin-right: 15px;
-  font-size: 18px;
-  margin-top: 30px;
-}
-.carousel-caption a {
-  color: #38270f;
+.carousel-caption .box-slide h1 {
+  color: #746857;
+  padding: 5px 0;
   text-shadow: none;
 }
-.carousel-caption h1 {
-  font-size: 26px;
+.carousel-caption .box-slide h4 {
+  color: #989083;
+  padding: 5px 0;
   text-shadow: none;
 }
-.carousel-caption .text {
-  margin-top: 40px;
-}
-.carousel-caption p {
-  font-size: 20px;
+.carousel-caption .box-slide p {
+  color: #7c7c7c;
   text-shadow: none;
-}
-.carousel-caption .scrollme {
-  color: #555;
-  font-size: 28px;
 }
 .header-margin {
   margin-top: 150px;
@@ -1017,62 +1014,28 @@ color
 .img-size a>img {
   width: 100%;
 }
-#info {
-  background-color: #ebeaea;
-  padding: 60px 0;
-}
-#info h1 {
-  color: #555;
-  text-align: center;
-  padding-bottom: 25px;
-}
-#footer_area {
-  background: transparent;
+footer {
+  background-color: #726c64;
   padding: 30px 0;
-  color: #777;
-  line-height: 30px;
-  border-top: 1px solid #ccc;
 }
-#footer_area .text-center a {
+footer .contact-sty h3,
+footer .contact-sty a {
   color: #fff;
+  font-size: 18;
 }
-#footer_area .first-foo {
-  border-bottom: 1px solid rgba(255,255,255,0.5);
-  padding: 15px 0;
+footer .contact-sty h3:hover,
+footer .contact-sty a:hover {
+  color: #d96263;
 }
-#footer_area .second-foo {
-  padding: 15px 0;
+footer .contact-sty .download-app > i {
+  font-size: 48px;
+  padding-right: 20px;
 }
-#footer_area .social-media-footer {
-  font-size: 16px;
-  color: #fff;
+footer .contact-sty .download-app > i:hover {
+  color: #d96263;
 }
-#footer_area .social-media-footer a {
-  color: #fff;
-  padding-right: 8px;
-  font-weight: 100;
-}
-#footer_area .social-media-footer a i {
+.btn {
   font-size: 18px;
-}
-#footer_area .social-media-footer a:hover {
-  color: #cb6c18;
-}
-#footer_area .info {
-  text-align: right;
-}
-#footer_area .info a {
-  padding-right: 15px;
-}
-#footer_area .contact-footer a {
-  color: #bf9e4f;
-  font-weight: 300;
-}
-#footer_area .contact-footer a:hover {
-  color: #e08f17;
-}
-#footer_area .text {
-  color: #e08f17;
 }
 .btn-big {
   padding: 25px 30px;
@@ -1096,23 +1059,42 @@ color
   border-top: 1px solid #eee;
   border-bottom: 1px solid #eee;
 }
+.btn-gray {
+  background: #f5f5f5;
+  display: inline-block;
+  border: 1px solid #ccc;
+  padding: 10px 15px;
+  color: #999;
+  font-weight: 300;
+  border-radius: 30px;
+}
+.btn-gray:hover,
+.btn-gray:focus {
+  background: #eee;
+  display: inline-block;
+  padding: 10px 15px;
+  color: #555;
+  font-weight: 300;
+  border-radius: 30px;
+  border: 1px solid #ccc;
+}
 .btn-red {
-  background: #9c161d;
+  background: #d96263;
   display: inline-block;
   padding: 10px 15px;
   color: #fff;
-  font-weight: 700;
+  font-weight: 300;
   border: none;
-  border-radius: 0;
+  border-radius: 30px;
 }
 .btn-red:hover,
 .btn-red:focus {
-  background: #6b0f14;
+  background: #c24139;
   display: inline-block;
   padding: 10px 15px;
   color: #fff;
-  font-weight: 700;
-  border-radius: 0px;
+  font-weight: 300;
+  border-radius: 30px;
 }
 .btn-yellow {
   background: #cbae00;
@@ -1183,7 +1165,7 @@ color
   color: #fff;
   font-weight: 300;
   border: 1px solid #fff;
-  border-radius: 3px;
+  border-radius: 30px;
   -webkit-transition: all ease 0.1s;
   -moz-transition: all ease 0.1s;
   -ms-transition: all ease 0.1s;
@@ -1197,7 +1179,7 @@ color
   padding: 10px 15px;
   color: #555;
   font-weight: 300;
-  border-radius: 3px;
+  border-radius: 30px;
   border: 1px solid #fff;
 }
 .btn-gray-clear {
