--- a/app/templates/blog.html
+++ b/app/templates/blog.html
@@ -1,6 +1,11 @@
 <div class="header-title-page">
     <div class="img-title" style="background-image: url('../img/bg-header.jpg')">
-        <h2 class="title">Noticias</h2>
+        <div class="title">
+            <h2>Bienvenido a nuestro blog</h2>
+            <small> Publicaciones acerca de nuestra aplicación, consejos para ayudarlo a usted y a sus seres queridos.
+            </small>
+
+        </div>
     </div>
 </div>
 <section id="content-area" class="content-blog">
